2004-01-29  Dominique Dumont  <domi@komarr.grenoble.hp.com> v2.001

	* IntSpan.pm: Updated copyright infos

2003-05-26  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm, IntSpan/Fields.pm:
	- bug fix in Fields::adapt_range_in_cb: method can be undef

2003-04-17  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm, IntSpan/Fields.pm:
	- small code refactoring and perf improvement

2003-03-19  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm: - added clear function in IntSpan

2003-03-07  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm: - some optimizations
	- cannot create range with undef values.

2003-03-04  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm, IntSpan/Fields.pm: - added Array::IntSpan::Fields
	- callback signature are now (start, end, [payload])

2003-02-24  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm: - various get_range bug_fixes

2003-02-14  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm:
	- get_range bug with fill: read range is now also modified

2003-02-13  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm: - get_range: bug fix with filler subf

	* IntSpan.pm: 
	- get_range: fill can be done with a sub ref
	- set_*_range: copy of splitted range items can be done using a
	sub ref. In this case the original value is passed to the sub
	ref. It must return the new value

2003-02-12  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm: - added fill parameter to get_range
	- split tests

	* IntSpan.pm: - bug fix in empty ranges

2003-02-11  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm: - better get_range and set_range

2003-02-06  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* IntSpan.pm: Modified version 1.02 with consolidation

	* IntSpan.pm, IntSpan/IP.pm: Initial version 1.01 from Toby Everett

	* IntSpan.pm, IntSpan/IP.pm: New file.

Revision history for Perl extension Array::IntSpan.
